--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,15 +30,66 @@
 </div>
 
 
-<!--<%= form_for :url , :html => {:id => "url_form", :class => 'new_user_account'} do |f| %>-->
+<!--<%#= form_for :url , :html => {:id => "url_form", :class => 'new_user_account'} do |f| %>-->
     <!--<fieldset class="reg-form" style="border-bottom-left-radius: 0em 0em; border-bottom-right-radius: 0em 0em;">-->
     <!--<p>-->
     <!--<label for="user_account_login">Website URL:</label>-->
-    <!--<%= f.text_field :url, class: 'text-input', id: 'url' %>-->
+    <!--<%#= f.text_field :url, class: 'text-input', id: 'url' %>-->
     <!--</p>-->
 
     <!--<p class="sign-in-btn">-->
-    <!--<%= f.submit 'Record URL',:id => 'RecordURL', :class => 'button-primary' %>-->
+    <!--<%#= f.submit 'Record URL',:id => 'RecordURL', :class => 'button-primary' %>-->
     <!--</p>-->
     <!--</fieldset>-->
-    <!--<% end %>-->
+    <!--<%# end %>-->
+
+<script>
+//    $.validator.addMethod("url", function(value, element) {
+//        return this.optional(element) || /^(http:\/\/www\.|https:\/\/www\.|http:\/\/|https:\/\/|www\.)[a-z0-9]+([\-\.]{1}[a-z0-9]+)*\.[a-z]{2,5}(:[0-9]{1,5})?(\/.*)?$/.test(value);
+//    }, "Please enter a valid url address.");
+//
+//    // Validate urlform form
+//    $("#url_form").validate({
+//        rules: { url: "required url"}
+//    });
+//
+//    $('#url_form').submit(function (e) {
+//        if($(this).valid()){
+//            var content = $('#url').val();
+//            e.preventDefault();
+//            $("#urls_list").prepend('<li> '+content+'</li>');
+//            $(this).trigger('reset');
+//        }
+//        else {
+//
+//        }
+//    });
+
+    //    $(window.applicationCache).bind('error', function () {
+    //        alert('There was an error when loading the cache manifest.');
+    //    });
+//
+//    if (!localStorage["pendingItems"]) {
+//        localStorage["pendingItems"] = JSON.stringify([]);
+//    }
+//
+//    $.retrieveJSON("/items.json", function(data) {
+//        var pendingItems = $.parseJSON(localStorage["pendingItems"]);
+//        $("#items").html($("#item_template").tmpl(data.concat(pendingItems)));
+//    });
+//
+//    $.retrieveJSON('/urls.json', function(data) {
+//        var pendingItems = $.parseJSON(localStorage["pendingItems"]);
+////        $("#urls_list").html($("#item_template").tmpl(data));
+//        $("#urls_list").html($("#item_template").tmpl(data.concat(pendingItems)));
+//    });
+//
+//    $.retrieveJSON('/urls.json', function(data) {
+////        $("#urls_list").empty().append($("#item_template").tmpl(data));
+//        $("#urls_list").html($("#item_template").tmpl(data));
+//    });
+//
+//    //    $.getJSON("/urls.json", function(data) {
+//    //        $("#urls_list").html($("#item_template").tmpl(data));
+//    //    });
+</script>
