--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="/application.manifest">
+<html manifest="/application.manifest" type="text/cache-manifest">
 <head>
   <title>Ajaxpro</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
